# ic-asset

./: Cargo.toml  README.md  chunk.did
.github/workflows/: release.yml
canister/: Cargo.toml  canister.toml  deploy.sh  stub.hbs
canister/src/: lib.rs  types.rs
client/: Cargo.toml  canister.toml
client/src/: main.rs  storage.rs
