[package]
name = "chunked-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candid = "0.10.9"
clap = { version = "4.5", features = ["derive"] }
ic-agent = "0.36.0"
serde = "1.0.203"
serde_bytes = "0.11.15"
walkdir = "2.5.0"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.30"

